--- a/Amostra.API/Amostra.API.csproj
+++ b/Amostra.API/Amostra.API.csproj
@@ -35,4 +35,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
